# example-application

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile.unknown  HAL - Semana3 - Ajuda Angelo Bluetooth  Kconfig  Kconfig.pfe  README.md  Readme  a.txt  acesso ao hardware.txt  bitbucket-pipelines.yml  docker-compose.yml  west.yml  zephyr_home.code-workspace  zephyr_module.bat  zephyr_module.sh  zephyrbase_unix.sh
.chglog/: CHANGELOG.tpl.md  config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  compliance.yml  docs.yml
APPJoaoReal/: README.md
APPJoaoReal/app/: Kconfig  prj.conf
APPJoaoReal/app/.renode/: app-asciinema  app-profile  app.resc
APPJoaoReal/app/src/: main.c
APPJoaoReal/testeBlinky_renode/: blinky-asciinema  blinky-profile  blinky.elf  blinky.repl  blinky.resc
APP_gfschuster/: CMakeLists.txt  README.md  prj.conf  run_APP_gfschuster.ps1
APP_gfschuster/src/: main.c
AppLenon/: README.md
AppLenon/OLED/: anotações.txt  main.c  prj.conf
AppLenon/blinktest/: CMakeLists.txt  prj.conf
AppLenon/blinktest/src/: main.c
AppLenon/temp_sensor_app/: CMakeLists.txt  prj.conf  testcase.yaml
AppLenon/temp_sensor_app/Boards/: samr21_xpro.overlay
AppLenon/temp_sensor_app/src/: main.c
AppLenon/teste app/: prj.conf
AppLenon/teste app/src/: driver_temp.c  main.c
HAL - Semana3 - Bluetooth/: .gitignore  README.md
HAL - Semana3 - Bluetooth/code/: ibeacon.c  ibeacon.h
HAL - Semana3 - Bluetooth/env/: versions.txt
HAL - Semana3 - Bluetooth/logs/: flash_log.txt
ProjFinal/: README.md
ProjFinal/temp_sensor_app/: CMakeLists.txt
ProjFinal/temp_sensor_app/include/: driver_temp_at30_tse.h
ProjFinal/temp_sensor_app/src/: driver_temp_at30_tse.c  main.c
[HAL]Display-OLED/include/mock/: spi_mock.c  spi_mock.h
[HAL]Display-OLED/include/test_framework/: tester_framework.c  tester_framework.h
[HAL]Display-OLED/src/: display_driver.c  display_driver.h
[HAL]Display-OLED/tests/: test_display_driver.c
[HAL]Display-OLED/tests/output/: test_display_driver
[HAL]_BNO055/: main.c
app/: CMakeLists.txt  app_version.h.in  prj.conf  rtt.conf  sample.yaml  tests.yaml
app/app_example/: debug.conf
app/app_example/src/: main.c
app/boards/: esp32.overlay  native_sim.conf  native_sim.overlay  nucleo_f302r8.overlay  nucleo_f413zh.overlay  samd21_xplained_pro.overlay
app/peripheral_bond/: README.md  prj.conf
app/src/: ethernet_example.c  ethernet_example.h  foo.c  foo.h  handlers.cpp  main.c  main.cpp  wifi.cpp
app/src/managerFactory/: iManager.hpp  managerFactory.cpp  managerFactory.hpp
app/src/wifiManager/: wifiManager.cpp  wifiManager.hpp  wifiManagerHandlers.cpp  wifiUtils.cpp
app/src/wifiSM/: wifiContext.cpp  wifiContext.hpp  wifiState.hpp  wifiStateConnected.cpp  wifiStateConnecting.cpp  wifiStateDisconnected.cpp  wifiStateError.cpp  wifiStateIdle.cpp  wifiStateImp.hpp
apps/novaapp/: CMakeLists.txt
boards/arm/custom_plank/: Kconfig.board  Kconfig.defconfig  README.md  custom_plank-pinctrl.dtsi  custom_plank.dts  custom_plank.yaml  custom_plank_defconfig
boards/common/: example_runner.board.cmake
demo/central_peripheral_indicate_read_write/peripheral_indicate_read_write/: README.rst  prj.conf
doc/: Doxyfile  Makefile  conf.py  index.rst  make.bat  zephyr.rst
doc/_doxygen/: groups.dox  main.md
doc/drivers/: blink.rst  index.rst
doc/lib/: custom.rst  index.rst
docs/: module.md
drivers/: CMakeLists.txt  Kconfig
drivers/blink/: CMakeLists.txt  Kconfig  Kconfig.gpio_led  gpio_led.c
drivers/ethernet/: CMakeLists.txt  Kconfig  Kconfig.ksz8851snl  README_KSZ8851SNL.md  eth_ksz8851snl.c  eth_ksz8851snl_priv.h
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/example_sensor/: Kconfig  (+2 more)
dts/bindings/: vendor-prefixes.txt
include/: module_hello.h
include/app/: handlers.h  wifi.h
include/ble_lib/: ble_lib.h  format.h
include/button_lib/: button_lib.h
include/custom_lib/: custom_lib.h
include/custom_subsys/: custom_subsys.h
include/led_lib/: led_lib.h
lib/: CMakeLists.txt  Kconfig
lib/ble_lib/: CMakeLists.txt  Kconfig  README.md  ble_lib.c
lib/button_lib/: CMakeLists.txt  Kconfig  button_lib.c
lib/custom/: CMakeLists.txt  Kconfig  custom.c
lib/custom_lib/: CMakeLists.txt  Kconfig  custom_lib.c
lib/led_lib/: CMakeLists.txt  Kconfig  led_lib.c
novaapp/src/: main.c
projeto-final/: README.md
samples/ble_button_isr/: Kconfig  README.md  prj.conf
samples/bt_test/: prj.conf
samples/button_led/: CMakeLists.txt  prj.conf
samples/central_multilink/: CMakeLists.txt  prj.conf
samples/central_write_demo/: prj.conf
samples/demo_4leds/: prj.conf
samples/demo_audit/: prj.conf
samples/peripheral_bond/: README.md
samples/peripheral_bond_button/: CMakeLists.txt  README.md  prj.conf
samples/peripheral_userdata_continuously/: CMakeLists.txt  README.rst  prj.conf
samples/test_peripheral_demo/: CMakeLists.txt  prj.conf  sample.yaml
scripts/: docker_setup.sh  example_runner.py  example_west_command.py  get_latest_version.sh  release_notes.sh  repo_compliance.py  undef_kconfig_allowlist.txt
services/: CMakeLists.txt  Kconfig  Kconfig.led  test.c
sprints/semana_1/: Relatorio_SIDNEY.md  relatorio_FRED.md  relatorio_LUCAS.md
sprints/semana_2/: Relatorio_ANGELO.md  Relatorio_LUCAS.md  Relatorio_SIDNEY.md  [HAL] Relatorio semana 2 Frederico
subsys/: CMakeLists.txt  Kconfig
subsys/custom_subsys/: CMakeLists.txt  Kconfig  custom_subsys.c
subsys/module_hello/: CMakeLists.txt  Kconfig  hello.c
sysbuild-example/: CMakeLists.txt  README.md  prj.conf  sysbuild.cmake  sysbuild.conf
sysbuild-example/boards/: nucleo_f413zh.overlay
sysbuild-example/dfu_app/: CMakeLists.txt  prj.conf
sysbuild-example/mfg_image/: CMakeLists.txt  prj.conf
sysbuild-example/overlays/: nucleo_f413zh_partitions.overlay
sysbuild-example/sysbuild/: mcuboot.conf
zephyr/: module.yml
zephyrproject/: .gitignore  README_HARDWARE.md
zephyrproject/.github/: pull_request_template.md
zephyrproject/app/: CMakeLists.txt  prj.conf
(+252 files in other folders)
